--- a/package.json
+++ b/package.json
@@ -1,61 +1,76 @@
 {
-  "name": "vtc",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "server": "npm run build:server && cross-env NODE_ENV=development node dist/server/server.js",
-    "build:server": "tsc --project tsconfig.node.json && copyfiles -u 1 server/.env dist/server",
-    "clean": "rimraf dist",
-    "build": "npm run build:server && tsc -b && vite build && cd server && npm install && npm run build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "render-build": "cd server && npm ci --include=dev && npm run build",
-    "start": "cd server && npm start",
-    "vercel-build": "tsc -b && vite build"
-  },
-  "dependencies": {
-    "@hookform/resolvers": "^5.2.0",
-    "@react-google-maps/api": "^2.20.6",
-    "@stripe/react-stripe-js": "^3.7.0",
-    "@stripe/stripe-js": "^7.3.1",
-    "@types/nodemailer": "^7.0.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^4.21.2",
-    "formik": "^2.4.6",
-    "mongoose": "^8.18.0",
-    "nodemailer": "^7.0.6",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-hook-form": "^7.61.1",
-    "react-icons": "^5.5.0",
-    "react-router-dom": "^7.6.0",
-    "stripe": "^18.2.1",
-    "styled-components": "^6.1.18",
-    "yup": "^1.6.1"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.25.0",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^4.17.21",
-    "@types/mongoose": "^5.11.96",
-    "@types/node": "^24.0.3",
-    "@types/nodemailer": "^7.0.1",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
-    "@vitejs/plugin-react": "^4.4.1",
-    "copyfiles": "^2.4.1",
-    "cross-env": "^7.0.3",
-    "eslint": "^9.25.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^16.0.0",
-    "rimraf": "^5.0.7",
-    "ts-node": "^10.9.2",
-    "typescript": "~5.8.3",
-    "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5"
-  }
+    "name": "vtc",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "server": "npm run build:server && cross-env NODE_ENV=development node dist/server/server.js",
+        "build:server": "tsc --project tsconfig.node.json && copyfiles -u 1 server/.env dist/server",
+        "clean": "rimraf dist",
+        "build": "npm run build:server && tsc -b && vite build && cd server && npm install && npm run build",
+        "lint": "eslint .",
+        "preview": "vite preview",
+        "render-build": "cd server && npm ci --include=dev && npm run build",
+        "start": "cd server && npm start",
+        "vercel-build": "tsc -b && vite build",
+        "test": "vitest",
+        "test:ui": "vitest --ui",
+        "test:run": "vitest run",
+        "test:coverage": "vitest run --coverage",
+        "format": "prettier --write .",
+        "format:check": "prettier --check ."
+    },
+    "dependencies": {
+        "@hookform/resolvers": "^5.2.0",
+        "@react-google-maps/api": "^2.20.6",
+        "@stripe/react-stripe-js": "^3.7.0",
+        "@stripe/stripe-js": "^7.3.1",
+        "@types/nodemailer": "^7.0.1",
+        "cors": "^2.8.5",
+        "dotenv": "^16.5.0",
+        "express": "^4.21.2",
+        "formik": "^2.4.6",
+        "mongoose": "^8.18.0",
+        "nodemailer": "^7.0.6",
+        "react": "^19.1.0",
+        "react-dom": "^19.1.0",
+        "react-hook-form": "^7.61.1",
+        "react-icons": "^5.5.0",
+        "react-router-dom": "^7.6.0",
+        "stripe": "^18.2.1",
+        "styled-components": "^6.1.18",
+        "yup": "^1.6.1"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.25.0",
+        "@testing-library/jest-dom": "^6.9.1",
+        "@testing-library/react": "^16.3.0",
+        "@testing-library/user-event": "^14.6.1",
+        "@types/cors": "^2.8.19",
+        "@types/express": "^4.17.21",
+        "@types/mongoose": "^5.11.96",
+        "@types/node": "^24.0.3",
+        "@types/nodemailer": "^7.0.1",
+        "@types/react": "^19.1.2",
+        "@types/react-dom": "^19.1.2",
+        "@vitejs/plugin-react": "^4.4.1",
+        "@vitest/coverage-v8": "^4.0.6",
+        "@vitest/ui": "^4.0.6",
+        "copyfiles": "^2.4.1",
+        "cross-env": "^7.0.3",
+        "eslint": "^9.25.0",
+        "eslint-plugin-react-hooks": "^5.2.0",
+        "eslint-plugin-react-refresh": "^0.4.19",
+        "globals": "^16.0.0",
+        "jest": "^30.2.0",
+        "jsdom": "^27.1.0",
+        "prettier": "^3.4.2",
+        "rimraf": "^5.0.7",
+        "ts-node": "^10.9.2",
+        "typescript": "~5.8.3",
+        "typescript-eslint": "^8.30.1",
+        "vite": "^6.3.5",
+        "vitest": "^4.0.6"
+    }
 }
