--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "dotenv": "^16.5.0",
         "express": "^4.21.2",
         "formik": "^2.4.6",
+        "lucide-react": "^0.554.0",
         "mongoose": "^8.18.0",
         "nodemailer": "^7.0.6",
         "react": "^19.1.0",
