--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "@types/nodemailer": "^6.4.17",
+        "bcrypt": "^6.0.0",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
@@ -28,6 +29,7 @@
         "stripe": "^14.3.0"
     },
     "devDependencies": {
+        "@types/bcrypt": "^6.0.0",
         "@types/cors": "^2.8.19",
         "@types/express": "^4.17.23",
         "@types/jest": "^30.0.0",
