--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "@testing-library/jest-dom": "^6.9.1",
         "@testing-library/react": "^16.3.0",
         "@testing-library/user-event": "^14.6.1",
+        "@types/bcrypt": "^6.0.0",
         "@types/cors": "^2.8.19",
         "@types/express": "^4.17.21",
         "@types/mongoose": "^5.11.96",
